# ludinho_the_best

./: README.md  app.py  pyproject.toml  requirements.txt  server.py
pages/: 00_login.py  01_Dashboard.py  02_Jogos.py  03_Clientes.py  04_Containers.py  05_Movimentos.py  06_Pedidos_de_Envio.py  07_Relatorios.py  08_Config.py  08_Ludocoins.py  09_Config.py
scripts/: run_webhook_with_ngrok.py  start_ngrok_webhook.sh
services/: chat_state_service.py  containers_service.py  envios_service.py  ludocoins_service.py  movimentos_service.py  reports_service.py  supabase_client.py  table_utils.py  utils.py  whatsapp_service.py
sql/: mega_seed_full.sql  reset_all.sql  schema_full.sql
tests/: conftest.py  test_webhook.py
