[project]
name = "ludinho-the-best"
version = "0.1.0"
description = "Painel Streamlit e webhook FastAPI do bot Ludinho"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ludolovers"}]
dependencies = [
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "pyngrok",
    "python-dotenv==1.0.1",
    "shortuuid==1.0.13",
    "streamlit==1.37.1",
    "supabase==2.5.1",
    "uvicorn[standard]==0.29.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "fastapi[testclient]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
